--- a/index.html
+++ b/index.html
@@ -3,32 +3,33 @@
 <head>
   <meta  charset="utf-8">
   <link rel="stylesheet" href="style.css">
+  <title>Игра</title>
 </head>
 <body>
 	<div class='menu'>
 		<ul>
 			<li id="start">Новая игра</li>
 			<li>количество карт
-                  <select id="val">
-				      <option value='8'>8</option>
-                      <option value='56'>56</option>
-                      <option value='64'>64</option>
-                      <option value='72'>72</option>
-                      <option value='84'>84</option>
-                  </select>
+                <select id="val">	
+			        <option value='40'>40</option>
+                    <option value='56'>56</option>
+                    <option value='64'>64</option>
+                    <option value='72'>72</option>
+                    <option value='84'>84</option>
+                </select>
             </li>
-			<li>
-			  <div class='rools'>Правила</div>
-			  <div id='rools-text' class='hide'>
-			    Игроки ходят по очереди, выкладывая одну карту на стол.<br>
-				Чья карта на столе будет большей, тот забирает куш.<br>
-				Выигрывает тот, кто соберет больше карт.
+			<li id='rool'>Правила
+			  <div>
+			    <p>Игроки ходят по очереди, выкладывая по одной карте на стол.</p>
+				<p>Игрок, чья карта на столе окажется большей, забирает куш.</p>
+				<p>Побеждает игрок, забравший наиболшее количество карт.</p>
 			  </div>
 			</li>
 		</ul>
 	</div>
-	<div id='container' class='container'>	
-	    <div id='listResult'>
+	<div id='container' class='container'>
+	</div>
+	<div id='listResult'>
 			<h2 id='win'></h2>
 			<table id='tableResult'>
 				<tr>
@@ -49,8 +50,8 @@
 			</table>
 			<button id='newGame' class='newGame'>Начать новую игру</button>
 			<button id='close' class='close'>X</button>
-	    </div>
-	</div>
+	    </div>    
+	
 	<script src='game.js'></script>
 </body>
 </html>                           
